# StarWars

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml  coverage.yaml  main.yaml  test.yaml  test_coverage.yml
cmake/include/: Common.cmake  WindowsSettings.cmake
cmake/scripts/: build.cmake  build.txt  configure.cmake  configure.txt  coverage.cmake  prepare_3rdparty.cmake
conan/: common  conanfile.txt  windows_x64_debug  windows_x64_release
server/core/: CMakeLists.txt  vector.cpp
server/utils/: CMakeLists.txt  move.cpp  rotate.cpp
server/utils/include/utils/: move.h  rotate.h
src/: CMakeLists.txt
src/include/: callable.h  exception.h  exception_handler.h
src/server/: CMakeLists.txt  server.cpp
src/server/commands/: CMakeLists.txt  burn_fuel.cpp  check_fuel.cpp  command.cpp  end_command.cpp  end_move.cpp  end_rotate.cpp  exception_handler.cpp  macro_command.cpp  move.cpp  repeat.cpp  repeat_n.cpp  rotate.cpp  set_angle.cpp  set_velocity.cpp  start_command.cpp  start_move.cpp  start_rotate.cpp  write_log_message.cpp
src/server/commands/include/: command.h
src/server/commands/include/commands/: burn_fuel.h  check_fuel.h  end_command.h  end_move.h  end_rotate.h  exception_handler.h  macro_command.h  move.h  property_names.h  repeat.h  repeat_n.h  rotate.h  set_angle.h  set_velocity.h  start_command.h  start_move.h  start_rotate.h  write_log_message.h
src/server/core/: CMakeLists.txt  object.cpp  vector.cpp
src/server/core/include/core/: angle.h  object.h  vector.h
src/server/utils/: CMakeLists.txt  rotate.cpp
src/server/utils/include/utils/: move.h  rotate.h
test/: CMakeLists.txt
test/commands/: CMakeLists.txt  end_move_test.cpp  end_rotate_test.cpp  exception_handler_test.cpp  macro_command_test.cpp  move_test.cpp  repeat_n_test.cpp  repeat_test.cpp  rotate_test.cpp  set_velocity_test.cpp  start_move_test.cpp  start_rotate_test.cpp  utils.h  write_log_message_test.cpp
test/core/: CMakeLists.txt  object_test.cpp  vector_test.cpp
test/utils/: CMakeLists.txt  move_test.cpp  rotate_test.cpp  utils_test.cpp
